# libcamera_ros_driver

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  nodelets.xml  package.xml
.github/workflows/: ros_build_test.yml
.serena/: project.yml
config/: camera_left.yaml  camera_right.yaml  default.yaml
docker/: .env  Dockerfile  dev.sh  docker-compose.dev.yaml  down.sh  ros_entrypoint.sh
include/libcamera_ros_driver/detail/: frame_msg.h
include/libcamera_ros_driver/utils/: control_mapping.h  pretty_print.h  types.h
launch/: camera.launch  camera.launch.py  stereo.launch  stereo.launch.py
launch/old/: uav_ov.launch
scripts/: check_stereo_sync.py  measure_cpu.sh
src/: libcamera_ros_driver.cpp
src/utils/: clamp.cpp  control_mapping.cpp  format_mapping.cpp  pretty_print.cpp  pv_to_cv.cpp  stream_mapping.cpp  type_extent.cpp  types.cpp
test/: integration.test  test_hw_smoke.cpp  test_integration.cpp  test_performance.cpp
tmux/cam_drivers_test/: monitor.sh  session.yml  session_old.yml  session_stereo.yml  start.sh
tmux/cam_drivers_test/config/: imu.yaml
tmux/cam_drivers_test/config/back/: camera_back.yaml  camera_back_old.yaml  roscalib.yaml
tmux/cam_drivers_test/config/front/: camera_front.yaml  camera_front_old.yaml  roscalib.yaml
tmux/cam_drivers_test/config/zenoh/: uav_router.json5
