<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>libcamera_ros_driver</name>
  <version>0.1.0</version>
  <description>Package for libcamera supported cameras (V4L2, Raspberry Pi Camera Modules) for ROS</description>

  <author email="Rauch.Christian@gmx.de">Christian Rauch</author>
  <maintainer email="vojtech.spurny@fel.cvut.cz">Vojtech Spurny</maintainer>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>libcamera_ros</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mrs_lib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
